[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mystipy"
version = "0.7.5"
description = "A simple Python data obfuscation utility."
authors = [{ name = "Justin Garofolo", email = "justin@garofolo.net" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Topic :: Text Processing :: General",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ooojustin/mystipy"
Documentation = "https://github.com/ooojustin/mystipy#readme"
Source = "https://github.com/ooojustin/mystipy"
Tracker = "https://github.com/ooojustin/mystipy/issues"

[project.scripts]
mystipy = "mystipy:main"
